# rally-timer

./: .gitignore  AGENTS.md  CLAUDE.md  PLAN_remove_multitenancy.md  RALLYCROSS_HEATS_PLAN.md  README.md  dev-env.sh  docker-compose.yml  dump-prod-to-local.sh  plan.md  seed.sh  simulate-pass.py  todo.md  verify-api.sh  verify-rallycross.sh  verify-training.sh  verify.sh
.github/: dependabot.yml
.github/workflows/: build.yml  release.yml
backend/: Cargo.toml  passes.ndjson
backend/src/: main.rs  serial.rs  server.rs
backend/src/routes/: events.rs  mod.rs  passes.rs
docs/superpowers/plans/: 2026-07-02-championship-default.md
finish-gate-arduino/: finish-gate-arduino.ino  finish-gate.ino
finish-gate-server/: Cargo.toml
finish-gate-server/src/: main.rs  server.rs
frontend/: package-lock.json  package.json
frontend/rally-timing-frontend/: package.json  tsconfig.json
frontend/src/lib/: stores.ts
rally-timer-app/: .env.example  .gitignore  AGENTS.md  Dockerfile  README.md  database.db  database.sqlite  database.sqlite-shm  database.sqlite-wal  debug.sql  eslint.config.js  package-lock.json  package.json  populate-database.sql  tsconfig.json  vite.config.ts
rally-timer-app/scripts/: mqtt-archiver.js
rally-timer-app/src/: app.css  app.d.ts  app.html  hooks.server.ts
uhf-gate/: .env.example  .gate_uuid  .gitignore  README.md  api.py  config.py  event_queue.py  feedback.py  key_manager.py  ntp_sync.py  reader.py  requirements.txt  uhf_gate.py
uhf-gate/tests/: test_config.py  test_event_queue.py  test_key_manager.py  test_ntp_sync.py  test_reader.py
(+221 files in other folders)
