[package]
name = "rally-timing-backend"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4", features = ["derive"] }
serialport = "4"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rumqttc = { version = "0.24", default-features = true, features = [
  "websocket",
  "use-rustls",
] }
http = "1.3.1"
